--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <body>
-        <ul class="sidebar">
+        <ul class="options-container">
             <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
             <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
             <button onclick="location.href='menu.html?style=UK'">UK</button>
@@ -31,8 +31,6 @@
         <ul class="calendar1">
             <button class="Delete" onclick="deleteitem()">Delete</button>
             <button class="edit" onclick="additem()">Edit</button>
-
-            
             <li>1</li>
             <li>2</li>
         </ul>
