--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Menu</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <header class="menubar">
@@ -28,12 +30,24 @@
         <button onclick="location.href='menu.html?style=UK'">UK</button>
     </ul>
 
-    <ul class="calendar1">
-        <button class="Delete" onclick="deleteitem()">Delete</button>
-        <button class="edit" onclick="additem()">Edit</button>
-        <li>1</li>
-        <li>2</li>
+    <ul class="foodlist">
+
+        <div class="menu-container" id="menuContainer"></div>
+
+        <button id="edit" class="edit" onclick="additem()">
+            <i class="fas fa-trash"></i> 
+        </button>
+
+        <button id="delete" class="delete" onclick="deleteitem()">
+            <i class="fas fa-edit"></i> 
+        </button>
+
+            
+        </li>
+
     </ul>
+
+     <button id="addpage" class="fa fa-plus" style="font-size:24px" onclick="addpage()"></button>
 
     <script src="index.js"></script> 
 </body>
