--- a/index.html
+++ b/index.html
@@ -10,26 +10,39 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
 
-    <header class="menubar">
-        <ul class="right">
+<body>
+    <header class="topbar">
+        <h1 class="right">
             <li><a class="home" href="index.html">Home</a></li>
-        </ul>
-        <ul class="left">
+        </h1>
+
+        <h1 class="left">
             <li><a href="shoppinglist.html">Shoppinglist</a></li>
             <li><a href="admin.html">Admin</a></li>
-        </ul>
-            
+        </h1>
     </header>
 
-
-    <body>
-        <ul class="options-container">
+    <aside class="options-container">
+        <h2>Main menu</h2>
+        <article class="sidebar">
             <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
             <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
             <button onclick="location.href='menu.html?style=UK'">UK</button>
-        </ul>
-    
+        </article>
 
-        <script src="index.js"></script> 
-    </body>
+    </aside>
+
+    <main class="main">
+        <article class="menu-container" id="menu-container">
+            <h2 class="menu-container" id="menu-container">test</h2>
+            <button id="addpage" class="fa fa-plus" onclick="addpage()"></button>
+        </article>
+
+    </main>
+
+
+
+    <script defer src="index.js"></script>
+</body>
+
 </html>
