--- a/menu.html
+++ b/menu.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Menu</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-
-<header class="menubar">
-    <ul class="right">
-        <li><a class="home" href="index.html">Home</a></li>
-    </ul>
-
-    <ul class="left">
-        <li><a href="shoppinglist.html">Shoppinglist</a></li>
-        <li><a href="admin.html">Admin</a></li>
-    </ul>
-        
-</header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Food Menu</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
 
 <body>
+    <header class="topbar">
+        <h1 class="right">
+            <li><a class="home" href="index.html">Home</a></li>
+        </h1>
 
-    <ul class="options-container">
-        <p id="menuHeader"></p>
-        <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
-        <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
-        <button onclick="location.href='menu.html?style=UK'">UK</button>
-    </ul>
+        <h1 class="left">
+            <li><a href="shoppinglist.html">Shoppinglist</a></li>
+            <li><a href="admin.html">Admin</a></li>
+        </h1>
+    </header>
 
-    <script src="index.js"></script> 
+    <aside class="options-container">
+        <h2 id="menuHeader"></h2>
+        <article class="sidebar">
+            <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
+            <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
+            <button onclick="location.href='menu.html?style=UK'">UK</button>
+        </article>
+
+    </aside>
+
+    <main class="main">
+        <article class="menu-container" id="menu-container">
+            <h2 class="menu-container" id="menuContainer"></h2>
+        </article>
+    </main>
+
+
+
+    <script defer src="index.js"></script>
 </body>
 
-
-<script src="index.js"></script>
-</body>
 </html>
