--- a/alldish.html
+++ b/alldish.html
@@ -70,8 +70,8 @@
                     <input type="text" id="foodName" required>
                     <label for="foodRecipe">Recipe:</label>
                     <textarea id="foodRecipe" required></textarea>
-                    <button id="submitFood" onclick="submitFood()">Submit</button>
-                    <button id="cancelFood" onclick="cancelAdd()">Cancel</button>
+                    <button id="submitFood" onclick="submitFood()"></button>
+                    <button id="cancelFood" onclick="cancelAdd()"></button>
                 </section>
         
                 <section id="detailModal" class="modal hidden" onclick="closeModal(event)">
