--- a/menu.html
+++ b/menu.html
@@ -87,10 +87,10 @@
                 <input type="text" id="tags"> <!-- Ensure this ID is used in JavaScript -->
             
                 <button type="button" id="submitFood" onclick="submitFood()">
-                    <i class="fa fa-save"></i> Submit
+                    <i class="fa fa-save"></i>
                 </button>
                 <button type="button" id="cancelFood" onclick="cancelAdd()">
-                    <i class="fa fa-close"></i> Cancel
+                    <i class="fa fa-close"></i>
                 </button>
             </section>
     
