--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
                 <ul>
     
                     <li>
-                        <a href="#">
+                        <a href="shoppinglist.html">
                             <i class="material-icons">shopping_cart</i>
                         </a>
                     </li>
