--- a/menu.html
+++ b/menu.html
@@ -48,6 +48,12 @@
                     <button onclick="location.href='menu.html?style=Drink'">Drink</button>
                     <button onclick="location.href='menu.html?style=Dessert'">Dessert</button>
                     <button onclick="location.href='menu.html?style=Sauce'">Sauce</button>
+                    <button id="adminloadDefaultData" onclick="loadDefaultData()">
+                            Load Default Data
+                        </button>
+                        <button id="clearAllDishes" onclick="clearAllDishes()">
+                            Clear All Dishes
+                    </button>
 
                 </article>
         
